src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from d:\PPL\Asm2\assignment2\src\main\mt22\parser\MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'break'", "'boolean'", "'do'", 
                     "'else'", "'float'", "'for'", "'function'", "'if'", 
                     "'integer'", "'return'", "'string'", "'while'", "'void'", 
                     "'out'", "'continue'", "'of'", "'inherit'", "'array'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'::'", 
                     "','", "';'", "':'", "'{'", "'}'", "'('", "')'", "'['", 
                     "']'", "'='", "'.'" ]

    symbolicNames = [ "<INVALID>", "AUTO", "BREAK", "BOOLEAN", "DO", "ELSE", 
                      "FLOAT", "FOR", "FUNCTION", "IF", "INTEGER", "RETURN", 
                      "STRING", "WHILE", "VOID", "OUT", "CONTINUE", "OF", 
                      "INHERIT", "ARRAY", "ADD", "SUB", "MUL", "DIV", "REMAINDER", 
                      "BOOL_NEGA", "BOOL_CONJ", "BOOL_DISJ", "EQUAL", "NOT_EQUAL", 
                      "LESS_THAN", "GREATER_THAN", "LESS_THAN_EQ", "GREATER_THAN_EQ", 
                      "DOUBLE_COLON", "COMMA", "SEMI", "COLON", "LB", "RB", 
                      "LP", "RP", "LSB", "RSB", "ASSIGN", "DOT", "BOOLEANLIT", 
                      "ID", "INTLIT", "FLOATLIT", "STRINGLIT", "WS", "SINGLE_LINE_COMMENT", 
                      "MULTI_LINE_COMMENT", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_decllist = 1
    RULE_decl = 2
    RULE_vardecl = 3
    RULE_vardecl_short = 4
    RULE_vardecl_full = 5
    RULE_varbase = 6
    RULE_varrec = 7
    RULE_paramdecllist = 8
    RULE_paramdeclprime = 9
    RULE_paramdecl = 10
    RULE_funcdecl = 11
    RULE_funcprototype = 12
    RULE_funcbody = 13
    RULE_element_type = 14
    RULE_var_type = 15
    RULE_return_type = 16
    RULE_array = 17
    RULE_array_type = 18
    RULE_idlist = 19
    RULE_dim = 20
    RULE_exprlist = 21
    RULE_expr = 22
    RULE_exp1 = 23
    RULE_exp2 = 24
    RULE_exp3 = 25
    RULE_exp4 = 26
    RULE_exp5 = 27
    RULE_exp6 = 28
    RULE_exp7 = 29
    RULE_relationalOp = 30
    RULE_indexOp = 31
    RULE_stmtlist = 32
    RULE_stmt = 33
    RULE_asm_stmt = 34
    RULE_if_stmt = 35
    RULE_for_stmt = 36
    RULE_while_stmt = 37
    RULE_dowhile_stmt = 38
    RULE_break_stmt = 39
    RULE_continue_stmt = 40
    RULE_return_stmt = 41
    RULE_call_stmt = 42
    RULE_block_stmt = 43
    RULE_constant = 44
    RULE_funccall = 45
    RULE_argumentlist = 46
    RULE_argumentprime = 47
    RULE_argument = 48
    RULE_operand = 49
    RULE_arraylit = 50

    ruleNames =  [ "program", "decllist", "decl", "vardecl", "vardecl_short", 
                   "vardecl_full", "varbase", "varrec", "paramdecllist", 
                   "paramdeclprime", "paramdecl", "funcdecl", "funcprototype", 
                   "funcbody", "element_type", "var_type", "return_type", 
                   "array", "array_type", "idlist", "dim", "exprlist", "expr", 
                   "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", "exp7", 
                   "relationalOp", "indexOp", "stmtlist", "stmt", "asm_stmt", 
                   "if_stmt", "for_stmt", "while_stmt", "dowhile_stmt", 
                   "break_stmt", "continue_stmt", "return_stmt", "call_stmt", 
                   "block_stmt", "constant", "funccall", "argumentlist", 
                   "argumentprime", "argument", "operand", "arraylit" ]

    EOF = Token.EOF
    AUTO=1
    BREAK=2
    BOOLEAN=3
    DO=4
    ELSE=5
    FLOAT=6
    FOR=7
    FUNCTION=8
    IF=9
    INTEGER=10
    RETURN=11
    STRING=12
    WHILE=13
    VOID=14
    OUT=15
    CONTINUE=16
    OF=17
    INHERIT=18
    ARRAY=19
    ADD=20
    SUB=21
    MUL=22
    DIV=23
    REMAINDER=24
    BOOL_NEGA=25
    BOOL_CONJ=26
    BOOL_DISJ=27
    EQUAL=28
    NOT_EQUAL=29
    LESS_THAN=30
    GREATER_THAN=31
    LESS_THAN_EQ=32
    GREATER_THAN_EQ=33
    DOUBLE_COLON=34
    COMMA=35
    SEMI=36
    COLON=37
    LB=38
    RB=39
    LP=40
    RP=41
    LSB=42
    RSB=43
    ASSIGN=44
    DOT=45
    BOOLEANLIT=46
    ID=47
    INTLIT=48
    FLOATLIT=49
    STRINGLIT=50
    WS=51
    SINGLE_LINE_COMMENT=52
    MULTI_LINE_COMMENT=53
    ERROR_CHAR=54
    UNCLOSE_STRING=55
    ILLEGAL_ESCAPE=56

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decllist(self):
            return self.getTypedRuleContext(MT22Parser.DecllistContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.decllist()
            self.state = 103
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecllistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def decllist(self):
            return self.getTypedRuleContext(MT22Parser.DecllistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decllist




    def decllist(self):

        localctx = MT22Parser.DecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decllist)
        try:
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.decl()
                self.state = 106
                self.decllist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl_short(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl_shortContext,0)


        def vardecl_full(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl_fullContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        try:
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.vardecl_short()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.vardecl_full()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_shortContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(MT22Parser.Var_typeContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl_short




    def vardecl_short(self):

        localctx = MT22Parser.Vardecl_shortContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vardecl_short)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.idlist()
            self.state = 120
            self.match(MT22Parser.COLON)
            self.state = 121
            self.var_type()
            self.state = 122
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_fullContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varrec(self):
            return self.getTypedRuleContext(MT22Parser.VarrecContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl_full




    def vardecl_full(self):

        localctx = MT22Parser.Vardecl_fullContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vardecl_full)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.varrec()
            self.state = 125
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarbaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(MT22Parser.Var_typeContext,0)


        def EQUAL(self):
            return self.getToken(MT22Parser.EQUAL, 0)

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_varbase




    def varbase(self):

        localctx = MT22Parser.VarbaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_varbase)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(MT22Parser.ID)
            self.state = 128
            self.match(MT22Parser.COLON)
            self.state = 129
            self.var_type()
            self.state = 130
            self.match(MT22Parser.EQUAL)
            self.state = 131
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarrecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def varrec(self):
            return self.getTypedRuleContext(MT22Parser.VarrecContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(MT22Parser.Var_typeContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_varrec




    def varrec(self):

        localctx = MT22Parser.VarrecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_varrec)
        try:
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.match(MT22Parser.ID)
                self.state = 134
                self.match(MT22Parser.COMMA)
                self.state = 135
                self.varrec()
                self.state = 136
                self.match(MT22Parser.COMMA)
                self.state = 137
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.match(MT22Parser.ID)
                self.state = 140
                self.match(MT22Parser.COLON)
                self.state = 141
                self.var_type()
                self.state = 142
                self.match(MT22Parser.ASSIGN)
                self.state = 143
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamdecllistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramdeclprime(self):
            return self.getTypedRuleContext(MT22Parser.ParamdeclprimeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_paramdecllist




    def paramdecllist(self):

        localctx = MT22Parser.ParamdecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paramdecllist)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.OUT, MT22Parser.INHERIT, MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.paramdeclprime()
                pass
            elif token in [MT22Parser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamdeclprimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramdecl(self):
            return self.getTypedRuleContext(MT22Parser.ParamdeclContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def paramdeclprime(self):
            return self.getTypedRuleContext(MT22Parser.ParamdeclprimeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_paramdeclprime




    def paramdeclprime(self):

        localctx = MT22Parser.ParamdeclprimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paramdeclprime)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.paramdecl()
                self.state = 152
                self.match(MT22Parser.COMMA)
                self.state = 153
                self.paramdeclprime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.paramdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(MT22Parser.Var_typeContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_paramdecl




    def paramdecl(self):

        localctx = MT22Parser.ParamdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paramdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 158
                self.match(MT22Parser.INHERIT)


            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.OUT:
                self.state = 161
                self.match(MT22Parser.OUT)


            self.state = 164
            self.match(MT22Parser.ID)
            self.state = 165
            self.match(MT22Parser.COLON)
            self.state = 166
            self.var_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcprototype(self):
            return self.getTypedRuleContext(MT22Parser.FuncprototypeContext,0)


        def funcbody(self):
            return self.getTypedRuleContext(MT22Parser.FuncbodyContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_funcdecl




    def funcdecl(self):

        localctx = MT22Parser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_funcdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.funcprototype()
            self.state = 169
            self.funcbody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncprototypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.ID)
            else:
                return self.getToken(MT22Parser.ID, i)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def return_type(self):
            return self.getTypedRuleContext(MT22Parser.Return_typeContext,0)


        def LP(self):
            return self.getToken(MT22Parser.LP, 0)

        def paramdecllist(self):
            return self.getTypedRuleContext(MT22Parser.ParamdecllistContext,0)


        def RP(self):
            return self.getToken(MT22Parser.RP, 0)

        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_funcprototype




    def funcprototype(self):

        localctx = MT22Parser.FuncprototypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_funcprototype)
        try:
            self.state = 189
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 171
                self.match(MT22Parser.ID)
                self.state = 172
                self.match(MT22Parser.COLON)
                self.state = 173
                self.match(MT22Parser.FUNCTION)
                self.state = 174
                self.return_type()
                self.state = 175
                self.match(MT22Parser.LP)
                self.state = 176
                self.paramdecllist()
                self.state = 177
                self.match(MT22Parser.RP)
                self.state = 178
                self.match(MT22Parser.INHERIT)
                self.state = 179
                self.match(MT22Parser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 181
                self.match(MT22Parser.ID)
                self.state = 182
                self.match(MT22Parser.COLON)
                self.state = 183
                self.match(MT22Parser.FUNCTION)
                self.state = 184
                self.return_type()
                self.state = 185
                self.match(MT22Parser.LP)
                self.state = 186
                self.paramdecllist()
                self.state = 187
                self.match(MT22Parser.RP)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncbodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Block_stmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_funcbody




    def funcbody(self):

        localctx = MT22Parser.FuncbodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_funcbody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Element_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_element_type




    def element_type(self):

        localctx = MT22Parser.Element_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_element_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INTEGER) | (1 << MT22Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def element_type(self):
            return self.getTypedRuleContext(MT22Parser.Element_typeContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def array_type(self):
            return self.getTypedRuleContext(MT22Parser.Array_typeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_var_type




    def var_type(self):
